# Interactive-Feedback-With-Capture-MCP

./: .gitignore  CHANGELOG.md  README.md  README_EN.md  feedback_ui.py  pyproject.toml  server.py
.cursor/rules/: mcp-feedback.mdc
interactive_feedback_mcp/: __init__.py  __main__.py
